  - wise - didn't always encoding number fields correctly
  - db.pl - added a repair command that will fix some common issues
  - viewer - reading packets from S3 failed
  - viewer - increase speed when searching match fields
  - viewer/wise - new userAuthIps setting that has which ips auth requests can
                  come from. header mode - default localhost, other - default all ips

3.3.1 2022/01/26
  - viewer - fix displaying large packets or xored packets not always working
  - capture - refactor curl code based on recommendations
  - capture - only allow 50 packets per ip4 frag
  - capture - new modbus parser (thanks mcgillowen)
  - tests - reduce race conditions

3.3.0 2022/01/19
  - BREAKING - non standard pcap files now use the .arkime extension
  - BREAKING - for wise multiES entries, prefix: now defaults to arkime_
  - BREAKING - for wise threatstream source you must create md5 index manually
  - release - node 14.18.3
  - viewer - default to hunt reassembled packets
  - viewer - add descriptions to hunts
  - viewer - hide graph/map (speeds up large queries)
  - viewer - history logs es query/indices
  - viewer - open up to 50 sessions at a time button
  - viewer - make sure hunt progress bar shows up
  - viewer - handle corrupt pcap files better
  - viewer - handle hunt errors better
  - viewer - scrubbing won't crash on unsupported files
  - capture - make sure file/seq es requests have higher priority
  - capture - support pcap flies with 0 timestamp
  - capture - use .arkime file extension for non standard pcap files
  - capture - new _dropBySession rule op
  - capture - fix infite recursion - thanks albntomat0_1
  - capture - improve udp/tcp header length checking
  - capture - improve error messages for field setting issues
  - capture - cache when getting pcap data from S3 (thanks pjsg)
  - capture - New ecsEventProvider setting
  - wise - switch from node-sqlite3 to better-sqlite3 package