@@ -37,6 +37,7 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
   - viewer - increase speed when searching match fields
   - viewer/wise - new userAuthIps setting that has which ips auth requests can
                   come from. header mode - default localhost, other - default all ips
+  - capture - switch from deflate to gzip posting to ES, lower min gzip size to 860
 
 3.3.1 2022/01/26
   - viewer - fix displaying large packets or xored packets not always working
